[package]
name = "colorbox"
version = "0.3.0"
edition = "2021"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
description = "A low-level toolbox for working with color"
documentation = "https://docs.rs/colorbox"
repository = "https://github.com/cessen/colorbox"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["color"]
categories = ["graphics"]

[dependencies]
